src/bindings/flutter_windows_bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */

pub type wchar_t = ::std::os::raw::c_ushort;
pub type UINT = ::std::os::raw::c_uint;
pub type UINT_PTR = ::std::os::raw::c_ulonglong;
pub type LONG_PTR = ::std::os::raw::c_longlong;
pub type WPARAM = UINT_PTR;
pub type LPARAM = LONG_PTR;
pub type LRESULT = LONG_PTR;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HWND__ {
    pub unused: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of HWND__"][::std::mem::size_of::<HWND__>() - 4usize];
    ["Alignment of HWND__"][::std::mem::align_of::<HWND__>() - 4usize];
    ["Offset of field: HWND__::unused"][::std::mem::offset_of!(HWND__, unused) - 0usize];
};
pub type HWND = *mut HWND__;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FlutterDesktopPluginRegistrar {
    _unused: [u8; 0],
}
pub type FlutterDesktopPluginRegistrarRef = *mut FlutterDesktopPluginRegistrar;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FlutterDesktopViewController {
    _unused: [u8; 0],
}
pub type FlutterDesktopViewControllerRef = *mut FlutterDesktopViewController;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FlutterDesktopView {
    _unused: [u8; 0],
}
pub type FlutterDesktopViewRef = *mut FlutterDesktopView;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FlutterDesktopEngine {
    _unused: [u8; 0],
}
pub type FlutterDesktopEngineRef = *mut FlutterDesktopEngine;
pub const FlutterDesktopGpuPreference_NoPreference: FlutterDesktopGpuPreference = 0;
pub const FlutterDesktopGpuPreference_LowPowerPreference: FlutterDesktopGpuPreference = 1;
pub type FlutterDesktopGpuPreference = ::std::os::raw::c_int;
pub const FlutterDesktopUIThreadPolicy_Default: FlutterDesktopUIThreadPolicy = 0;
pub const FlutterDesktopUIThreadPolicy_RunOnPlatformThread: FlutterDesktopUIThreadPolicy = 1;
pub const FlutterDesktopUIThreadPolicy_RunOnSeparateThread: FlutterDesktopUIThreadPolicy = 2;
pub type FlutterDesktopUIThreadPolicy = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FlutterDesktopEngineProperties {
    pub assets_path: *const wchar_t,
    pub icu_data_path: *const wchar_t,
    pub aot_library_path: *const wchar_t,
    pub dart_entrypoint: *const ::std::os::raw::c_char,
    pub dart_entrypoint_argc: ::std::os::raw::c_int,
    pub dart_entrypoint_argv: *mut *const ::std::os::raw::c_char,
    pub gpu_preference: FlutterDesktopGpuPreference,
    pub ui_thread_policy: FlutterDesktopUIThreadPolicy,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of FlutterDesktopEngineProperties"]
        [::std::mem::size_of::<FlutterDesktopEngineProperties>() - 56usize];
    ["Alignment of FlutterDesktopEngineProperties"]
        [::std::mem::align_of::<FlutterDesktopEngineProperties>() - 8usize];
    ["Offset of field: FlutterDesktopEngineProperties::assets_path"]
        [::std::mem::offset_of!(FlutterDesktopEngineProperties, assets_path) - 0usize];
    ["Offset of field: FlutterDesktopEngineProperties::icu_data_path"]
        [::std::mem::offset_of!(FlutterDesktopEngineProperties, icu_data_path) - 8usize];
    ["Offset of field: FlutterDesktopEngineProperties::aot_library_path"]
        [::std::mem::offset_of!(FlutterDesktopEngineProperties, aot_library_path) - 16usize];
    ["Offset of field: FlutterDesktopEngineProperties::dart_entrypoint"]
        [::std::mem::offset_of!(FlutterDesktopEngineProperties, dart_entrypoint) - 24usize];
    ["Offset of field: FlutterDesktopEngineProperties::dart_entrypoint_argc"]
        [::std::mem::offset_of!(FlutterDesktopEngineProperties, dart_entrypoint_argc) - 32usize];
    ["Offset of field: FlutterDesktopEngineProperties::dart_entrypoint_argv"]
        [::std::mem::offset_of!(FlutterDesktopEngineProperties, dart_entrypoint_argv) - 40usize];
    ["Offset of field: FlutterDesktopEngineProperties::gpu_preference"]
        [::std::mem::offset_of!(FlutterDesktopEngineProperties, gpu_preference) - 48usize];
    ["Offset of field: FlutterDesktopEngineProperties::ui_thread_policy"]
        [::std::mem::offset_of!(FlutterDesktopEngineProperties, ui_thread_policy) - 52usize];
};
unsafe extern "C" {
    pub fn FlutterDesktopViewControllerCreate(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        engine: FlutterDesktopEngineRef,
    ) -> FlutterDesktopViewControllerRef;
}
unsafe extern "C" {
    pub fn FlutterDesktopViewControllerDestroy(controller: FlutterDesktopViewControllerRef);
}
unsafe extern "C" {
    pub fn FlutterDesktopViewControllerGetEngine(
        controller: FlutterDesktopViewControllerRef,
    ) -> FlutterDesktopEngineRef;
}
unsafe extern "C" {
    pub fn FlutterDesktopViewControllerGetView(
        controller: FlutterDesktopViewControllerRef,
    ) -> FlutterDesktopViewRef;
}
unsafe extern "C" {
    pub fn FlutterDesktopViewControllerHandleTopLevelWindowProc(
        controller: FlutterDesktopViewControllerRef,
        hwnd: HWND,
        message: UINT,
        wparam: WPARAM,
        lparam: LPARAM,
        result: *mut LRESULT,
    ) -> bool;
}
unsafe extern "C" {
    pub fn FlutterDesktopEngineCreate(
        engine_properties: *const FlutterDesktopEngineProperties,
    ) -> FlutterDesktopEngineRef;
}
unsafe extern "C" {
    pub fn FlutterDesktopEngineDestroy(engine: FlutterDesktopEngineRef) -> bool;
}
unsafe extern "C" {
    pub fn FlutterDesktopEngineGetPluginRegistrar(
        engine: FlutterDesktopEngineRef,
        plugin_name: *const ::std::os::raw::c_char,
    ) -> FlutterDesktopPluginRegistrarRef;
}
unsafe extern "C" {
    pub fn FlutterDesktopViewGetHWND(view: FlutterDesktopViewRef) -> HWND;
}
unsafe extern "C" {
    pub fn FlutterDesktopEngineProcessExternalWindowMessage(
        engine: FlutterDesktopEngineRef,
        hwnd: HWND,
        message: UINT,
        wparam: WPARAM,
        lparam: LPARAM,
        result: *mut LRESULT,
    ) -> bool;
}
